# rust-snake-game

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/game/: mod.rs  snake.rs
stdout/: Cargo.toml
stdout/src/: main.rs
