[package]
name = "learn-rust"
version = "0.1.0"
authors = ["Marcus Goldschmidt <marcus.oliveira@nuvem.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[workspace]

members = [
    "stdout",
]

[dependencies]
crossterm = "0.17.5"
rand = {version = "0.7.3", default-features=false, features=["small_rng"]}